_generated-doc/2.7/config/quarkus-core-general-config-items.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-core-general-config-items_configuration]]link:#quarkus-core-general-config-items_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-core-general-config-items_quarkus.native.resources.includes]]`link:#quarkus-core-general-config-items_quarkus.native.resources.includes[quarkus.native.resources.includes]`

[.description]
--
A comma separated list of globs to match resource paths that should be added to the native image. 
 Use slash (`/`) as a path separator on all platforms. Globs must not start with slash. 
 By default, no resources are included. 
 Example: Given that you have `src/main/resources/ignored.png` and `src/main/resources/foo/selected.png` in your source tree and one of your dependency JARs contains `bar/some.txt` file, with the following configuration quarkus.native.resources.includes = foo/++**++,bar/++**++/++*++.txt  the files `src/main/resources/foo/selected.png` and `bar/some.txt` will be included in the native image, while `src/main/resources/ignored.png` will not be included. 
 Supported glob features   Feature Description   `++*++` Matches a (possibly empty) sequence of characters that does not contain slash (`/`)   `++**++` Matches a (possibly empty) sequence of characters that may contain slash (`/`)   `?` Matches one character, but not slash   `++[++abc++]++` Matches one character given in the bracket, but not slash   `++[++a-z++]++` Matches one character from the range given in the bracket, but not slash   `++[++!abc++]++` Matches one character not named in the bracket; does not match slash   `++[++a-z++]++` Matches one character outside the range given in the bracket; does not match slash   `++{++one,two,three++}++` Matches any of the alternating tokens separated by comma; the tokens may contain wildcards, nested alternations and ranges   `++\++` The escape character   
 Note that there are three levels of escaping when passing this option via `application.properties`:  
 . `application.properties` parser 
 - MicroProfile Config list converter that splits the comma separated list 
 - Glob parser  All three levels use backslash (`++\++`) as the escaping character. So you need to use an appropriate number of backslashes depending on which level you want to escape. 
 Note that Quarkus extensions typically include the resources they require by themselves. This option is useful in situations when the built-in functionality is not sufficient.
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-core-general-config-items_quarkus.native.resources.excludes]]`link:#quarkus-core-general-config-items_quarkus.native.resources.excludes[quarkus.native.resources.excludes]`

[.description]
--
A comma separated list of globs to match resource paths that should *not* be added to the native image. 
 Use slash (`/`) as a path separator on all platforms. Globs must not start with slash. 
 Please refer to `includes` for details about the glob syntax. 
 By default, no resources are excluded. 
 Example: Given that you have `src/main/resources/red.png` and `src/main/resources/foo/green.png` in your source tree and one of your dependency JARs contains `bar/blue.png` file, with the following configuration quarkus.native.resources.includes = ++**++/++*++.png quarkus.native.resources.excludes = foo/++**++,++**++/green.png  the resource `red.png` will be available in the native image while the resources `foo/green.png` and `bar/blue.png` will not be available in the native image.
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-core-general-config-items_quarkus.native.debug.enabled]]`link:#quarkus-core-general-config-items_quarkus.native.debug.enabled[quarkus.native.debug.enabled]`

[.description]
--
If debug is enabled and debug symbols are generated. The symbols will be generated in a separate .debug file.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-core-general-config-items_quarkus.native.compression.level]]`link:#quarkus-core-general-config-items_quarkus.native.compression.level[quarkus.native.compression.level]`

[.description]
--
The compression level in ++[++1, 10++]++. 10 means *best* Higher compression level requires more time to compress the executable.
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-core-general-config-items_quarkus.native.compression.additional-args]]`link:#quarkus-core-general-config-items_quarkus.native.compression.additional-args[quarkus.native.compression.additional-args]`

[.description]
--
Allows passing extra arguments to the UPX command line (like --brute). The arguments are comma-separated. The exhaustive list of parameters can be found in link:https://github.com/upx/upx/blob/devel/doc/upx.pod[https://github.com/upx/upx/blob/devel/doc/upx.pod].
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-core-general-config-items_quarkus.package.manifest.add-implementation-entries]]`link:#quarkus-core-general-config-items_quarkus.package.manifest.add-implementation-entries[quarkus.package.manifest.add-implementation-entries]`

[.description]
--
If the Implementation information should be included in the runner jar's MANIFEST.MF.
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-core-general-config-items_quarkus.package.fernflower.enabled]]`link:#quarkus-core-general-config-items_quarkus.package.fernflower.enabled[quarkus.package.fernflower.enabled]`

[.description]
--
An advanced option that will decompile generated and transformed bytecode into the 'decompiled' directory. This is only taken into account when fast-jar is used.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-core-general-config-items_quarkus.package.fernflower.hash]]`link:#quarkus-core-general-config-items_quarkus.package.fernflower.hash[quarkus.package.fernflower.hash]`

[.description]
--
The git hash to use to download the fernflower tool from https://jitpack.io/com/github/fesh0r/fernflower/
--|string 
|`dbf407a655`


a|icon:lock[title=Fixed at build time] [[quarkus-core-general-config-items_quarkus.package.fernflower.jar-directory]]`link:#quarkus-core-general-config-items_quarkus.package.fernflower.jar-directory[quarkus.package.fernflower.jar-directory]`

[.description]
--
The directory into which to save the fernflower tool if it doesn't exist
--|string 
|`${user.home}/.quarkus`


a|icon:lock[title=Fixed at build time] [[quarkus-core-general-config-items_quarkus.package.manifest.manifest-sections-manifest-sections]]`link:#quarkus-core-general-config-items_quarkus.package.manifest.manifest-sections-manifest-sections[quarkus.package.manifest.manifest-sections]`

[.description]
--
Custom manifest sections to be added to the MANIFEST.MF file. An example of the user defined property: quarkus.package.manifest.manifest-sections.++{++Section-Name++}++.++{++Entry-Key1++}++=++{++Value1++}++ quarkus.package.manifest.manifest-sections.++{++Section-Name++}++.++{++Entry-Key2++}++=++{++Value2++}++
--|`Map<String,Map<String,String>>` 
|


a|icon:lock[title=Fixed at build time] [[quarkus-core-general-config-items_quarkus.test.profile]]`link:#quarkus-core-general-config-items_quarkus.test.profile[quarkus.test.profile]`

[.description]
--
The profile (dev, test or prod) to use when testing using @QuarkusTest
--|string 
|`test`


a|icon:lock[title=Fixed at build time] [[quarkus-core-general-config-items_quarkus.test.profile.tags]]`link:#quarkus-core-general-config-items_quarkus.test.profile.tags[quarkus.test.profile.tags]`

[.description]
--
The tags this profile is associated with. When the `quarkus.test.profile.tags` System property is set (its value is a comma separated list of strings) then Quarkus will only execute tests that are annotated with a `@TestProfile` that has at least one of the supplied (via the aforementioned system property) tags.
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-core-general-config-items_quarkus.test.container.network]]`link:#quarkus-core-general-config-items_quarkus.test.container.network[quarkus.test.container.network]`

[.description]
--
Controls the container network to be used when @QuarkusIntegration needs to launch the application in a container. This setting only applies if Quarkus does not need to use a shared network - which is the case if DevServices are used when running the test.
--|string 
|


h|[[quarkus-core-general-config-items_quarkus.index-dependency.index-dependency-artifacts-on-the-classpath-that-should-also-be-indexed]]link:#quarkus-core-general-config-items_quarkus.index-dependency.index-dependency-artifacts-on-the-classpath-that-should-also-be-indexed[Artifacts on the classpath that should also be indexed]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-core-general-config-items_quarkus.index-dependency.-dependency-name-.group-id]]`link:#quarkus-core-general-config-items_quarkus.index-dependency.-dependency-name-.group-id[quarkus.index-dependency."dependency-name".group-id]`

[.description]
--
The maven groupId of the artifact.
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-core-general-config-items_quarkus.index-dependency.-dependency-name-.artifact-id]]`link:#quarkus-core-general-config-items_quarkus.index-dependency.-dependency-name-.artifact-id[quarkus.index-dependency."dependency-name".artifact-id]`

[.description]
--
The maven artifactId of the artifact.
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-core-general-config-items_quarkus.index-dependency.-dependency-name-.classifier]]`link:#quarkus-core-general-config-items_quarkus.index-dependency.-dependency-name-.classifier[quarkus.index-dependency."dependency-name".classifier]`

[.description]
--
The maven classifier of the artifact.
--|string 
|


h|[[quarkus-core-general-config-items_quarkus.log.categories-minimum-logging-categories]]link:#quarkus-core-general-config-items_quarkus.log.categories-minimum-logging-categories[Minimum logging categories]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-core-general-config-items_quarkus.log.category.-categories-.min-level]]`link:#quarkus-core-general-config-items_quarkus.log.category.-categories-.min-level[quarkus.log.category."categories".min-level]`

[.description]
--
The minimum log level for this category. By default all categories are configured with `DEBUG` minimum level. To get runtime logging below `DEBUG`, e.g. `TRACE`, the minimum level has to be adjusted at build time, the right log level needs to be provided at runtime. As an example, to get `TRACE` logging, minimum level needs to be at `TRACE` and the runtime log level needs to match that.
--|InheritableLevel 
|`inherit`


h|[[quarkus-core-general-config-items_quarkus.log.console-console-logging]]link:#quarkus-core-general-config-items_quarkus.log.console-console-logging[Console logging]

h|Type
h|Default

a| [[quarkus-core-general-config-items_quarkus.log.console.enable]]`link:#quarkus-core-general-config-items_quarkus.log.console.enable[quarkus.log.console.enable]`

[.description]
--
If console logging should be enabled
--|boolean 
|`true`


a| [[quarkus-core-general-config-items_quarkus.log.console.stderr]]`link:#quarkus-core-general-config-items_quarkus.log.console.stderr[quarkus.log.console.stderr]`

[.description]
--
If console logging should go to `System++#++err` instead of `System++#++out`.
--|boolean 
|`false`


a| [[quarkus-core-general-config-items_quarkus.log.console.format]]`link:#quarkus-core-general-config-items_quarkus.log.console.format[quarkus.log.console.format]`

[.description]
--
The log format. Note that this value will be ignored if an extension is present that takes control of console formatting (e.g. an XML or JSON-format extension).
--|string 
|`%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{3.}] (%t) %s%e%n`


a| [[quarkus-core-general-config-items_quarkus.log.console.level]]`link:#quarkus-core-general-config-items_quarkus.log.console.level[quarkus.log.console.level]`

[.description]
--
The console log level.
--|link:https://docs.jboss.org/jbossas/javadoc/7.1.2.Final/org/jboss/logmanager/Level.html[Level]
 
|`ALL`


a| [[quarkus-core-general-config-items_quarkus.log.console.darken]]`link:#quarkus-core-general-config-items_quarkus.log.console.darken[quarkus.log.console.darken]`

[.description]
--
Specify how much the colors should be darkened. Note that this value will be ignored if an extension is present that takes control of console formatting (e.g. an XML or JSON-format extension).
--|int 
|`0`


a| [[quarkus-core-general-config-items_quarkus.log.console.async]]`link:#quarkus-core-general-config-items_quarkus.log.console.async[quarkus.log.console.async]`

[.description]
--
Indicates whether to log asynchronously
--|boolean 
|`false`


a| [[quarkus-core-general-config-items_quarkus.log.console.async.queue-length]]`link:#quarkus-core-general-config-items_quarkus.log.console.async.queue-length[quarkus.log.console.async.queue-length]`

[.description]
--
The queue length to use before flushing writing
--|int 
|`512`


a| [[quarkus-core-general-config-items_quarkus.log.console.async.overflow]]`link:#quarkus-core-general-config-items_quarkus.log.console.async.overflow[quarkus.log.console.async.overflow]`

[.description]
--
Determine whether to block the publisher (rather than drop the message) when the queue is full
--|`block`, `discard` 
|`block`


h|[[quarkus-core-general-config-items_quarkus.log.file-file-logging]]link:#quarkus-core-general-config-items_quarkus.log.file-file-logging[File logging]

h|Type
h|Default

a| [[quarkus-core-general-config-items_quarkus.log.file.enable]]`link:#quarkus-core-general-config-items_quarkus.log.file.enable[quarkus.log.file.enable]`

[.description]
--
If file logging should be enabled
--|boolean 
|`false`


a| [[quarkus-core-general-config-items_quarkus.log.file.format]]`link:#quarkus-core-general-config-items_quarkus.log.file.format[quarkus.log.file.format]`

[.description]
--
The log format
--|string 
|`%d{yyyy-MM-dd HH:mm:ss,SSS} %h %N[%i] %-5p [%c{3.}] (%t) %s%e%n`


a| [[quarkus-core-general-config-items_quarkus.log.file.level]]`link:#quarkus-core-general-config-items_quarkus.log.file.level[quarkus.log.file.level]`

[.description]
--
The level of logs to be written into the file.
--|link:https://docs.jboss.org/jbossas/javadoc/7.1.2.Final/org/jboss/logmanager/Level.html[Level]
 
|`ALL`


a| [[quarkus-core-general-config-items_quarkus.log.file.path]]`link:#quarkus-core-general-config-items_quarkus.log.file.path[quarkus.log.file.path]`

[.description]
--
The name of the file in which logs will be written.
--|link:https://docs.oracle.com/javase/8/docs/api/java/io/File.html[File]
 
|`quarkus.log`


a| [[quarkus-core-general-config-items_quarkus.log.file.async]]`link:#quarkus-core-general-config-items_quarkus.log.file.async[quarkus.log.file.async]`

[.description]
--
Indicates whether to log asynchronously
--|boolean 
|`false`


a| [[quarkus-core-general-config-items_quarkus.log.file.async.queue-length]]`link:#quarkus-core-general-config-items_quarkus.log.file.async.queue-length[quarkus.log.file.async.queue-length]`

[.description]
--
The queue length to use before flushing writing
--|int 
|`512`


a| [[quarkus-core-general-config-items_quarkus.log.file.async.overflow]]`link:#quarkus-core-general-config-items_quarkus.log.file.async.overflow[quarkus.log.file.async.overflow]`

[.description]
--
Determine whether to block the publisher (rather than drop the message) when the queue is full
--|`block`, `discard` 
|`block`


a| [[quarkus-core-general-config-items_quarkus.log.file.rotation.max-file-size]]`link:#quarkus-core-general-config-items_quarkus.log.file.rotation.max-file-size[quarkus.log.file.rotation.max-file-size]`

[.description]
--
The maximum file size of the log file after which a rotation is executed.
--|MemorySize  link:#memory-size-note-anchor[icon:question-circle[], title=More information about the MemorySize format]
|`10`


a| [[quarkus-core-general-config-items_quarkus.log.file.rotation.max-backup-index]]`link:#quarkus-core-general-config-items_quarkus.log.file.rotation.max-backup-index[quarkus.log.file.rotation.max-backup-index]`

[.description]
--
The maximum number of backups to keep.
--|int 
|`1`


a| [[quarkus-core-general-config-items_quarkus.log.file.rotation.file-suffix]]`link:#quarkus-core-general-config-items_quarkus.log.file.rotation.file-suffix[quarkus.log.file.rotation.file-suffix]`

[.description]
--
File handler rotation file suffix. When used, the file will be rotated based on its suffix. Example fileSuffix: .yyyy-MM-dd
--|string 
|


a| [[quarkus-core-general-config-items_quarkus.log.file.rotation.rotate-on-boot]]`link:#quarkus-core-general-config-items_quarkus.log.file.rotation.rotate-on-boot[quarkus.log.file.rotation.rotate-on-boot]`

[.description]
--
Indicates whether to rotate log files on server initialization. 
 You need to either set a `max-file-size` or configure a `file-suffix` for it to work.
--|boolean 
|`true`


h|[[quarkus-core-general-config-items_quarkus.log.syslog-syslog-logging]]link:#quarkus-core-general-config-items_quarkus.log.syslog-syslog-logging[Syslog logging]

h|Type
h|Default

a| [[quarkus-core-general-config-items_quarkus.log.syslog.enable]]`link:#quarkus-core-general-config-items_quarkus.log.syslog.enable[quarkus.log.syslog.enable]`

[.description]
--
If syslog logging should be enabled
--|boolean 
|`false`


a| [[quarkus-core-general-config-items_quarkus.log.syslog.endpoint]]`link:#quarkus-core-general-config-items_quarkus.log.syslog.endpoint[quarkus.log.syslog.endpoint]`

[.description]
--
The IP address and port of the syslog server
--|host:port 
|`localhost:514`


a| [[quarkus-core-general-config-items_quarkus.log.syslog.app-name]]`link:#quarkus-core-general-config-items_quarkus.log.syslog.app-name[quarkus.log.syslog.app-name]`

[.description]
--
The app name used when formatting the message in RFC5424 format
--|string 
|


a| [[quarkus-core-general-config-items_quarkus.log.syslog.hostname]]`link:#quarkus-core-general-config-items_quarkus.log.syslog.hostname[quarkus.log.syslog.hostname]`

[.description]
--
The name of the host the messages are being sent from
--|string 
|


a| [[quarkus-core-general-config-items_quarkus.log.syslog.facility]]`link:#quarkus-core-general-config-items_quarkus.log.syslog.facility[quarkus.log.syslog.facility]`

[.description]
--
Sets the facility used when calculating the priority of the message as defined by RFC-5424 and RFC-3164
--|`kernel`, `user-level`, `mail-system`, `system-daemons`, `security`, `syslogd`, `line-printer`, `network-news`, `uucp`, `clock-daemon`, `security2`, `ftp-daemon`, `ntp`, `log-audit`, `log-alert`, `clock-daemon2`, `local-use-0`, `local-use-1`, `local-use-2`, `local-use-3`, `local-use-4`, `local-use-5`, `local-use-6`, `local-use-7` 
|`user-level`


a| [[quarkus-core-general-config-items_quarkus.log.syslog.syslog-type]]`link:#quarkus-core-general-config-items_quarkus.log.syslog.syslog-type[quarkus.log.syslog.syslog-type]`

[.description]
--
Set the `SyslogType syslog type` this handler should use to format the message sent
--|`rfc5424`, `rfc3164` 
|`rfc5424`


a| [[quarkus-core-general-config-items_quarkus.log.syslog.protocol]]`link:#quarkus-core-general-config-items_quarkus.log.syslog.protocol[quarkus.log.syslog.protocol]`

[.description]
--
Sets the protocol used to connect to the syslog server
--|`tcp`, `udp`, `ssl-tcp` 
|`tcp`


a| [[quarkus-core-general-config-items_quarkus.log.syslog.use-counting-framing]]`link:#quarkus-core-general-config-items_quarkus.log.syslog.use-counting-framing[quarkus.log.syslog.use-counting-framing]`

[.description]
--
Set to `true` if the message being sent should be prefixed with the size of the message
--|boolean 
|`false`


a| [[quarkus-core-general-config-items_quarkus.log.syslog.truncate]]`link:#quarkus-core-general-config-items_quarkus.log.syslog.truncate[quarkus.log.syslog.truncate]`

[.description]
--
Set to `true` if the message should be truncated
--|boolean 
|`true`


a| [[quarkus-core-general-config-items_quarkus.log.syslog.block-on-reconnect]]`link:#quarkus-core-general-config-items_quarkus.log.syslog.block-on-reconnect[quarkus.log.syslog.block-on-reconnect]`

[.description]
--
Enables or disables blocking when attempting to reconnect a `org.jboss.logmanager.handlers.SyslogHandler.Protocol++#++TCP
TCP` or `org.jboss.logmanager.handlers.SyslogHandler.Protocol++#++SSL_TCP SSL TCP` protocol
--|boolean 
|`false`


a| [[quarkus-core-general-config-items_quarkus.log.syslog.format]]`link:#quarkus-core-general-config-items_quarkus.log.syslog.format[quarkus.log.syslog.format]`

[.description]
--
The log message format
--|string 
|`%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{3.}] (%t) %s%e%n`


a| [[quarkus-core-general-config-items_quarkus.log.syslog.level]]`link:#quarkus-core-general-config-items_quarkus.log.syslog.level[quarkus.log.syslog.level]`

[.description]
--
The log level specifying, which message levels will be logged by syslog logger
--|link:https://docs.jboss.org/jbossas/javadoc/7.1.2.Final/org/jboss/logmanager/Level.html[Level]
 
|`ALL`


a| [[quarkus-core-general-config-items_quarkus.log.syslog.async]]`link:#quarkus-core-general-config-items_quarkus.log.syslog.async[quarkus.log.syslog.async]`

[.description]
--
Indicates whether to log asynchronously
--|boolean 
|`false`


a| [[quarkus-core-general-config-items_quarkus.log.syslog.async.queue-length]]`link:#quarkus-core-general-config-items_quarkus.log.syslog.async.queue-length[quarkus.log.syslog.async.queue-length]`

[.description]
--
The queue length to use before flushing writing
--|int 
|`512`


a| [[quarkus-core-general-config-items_quarkus.log.syslog.async.overflow]]`link:#quarkus-core-general-config-items_quarkus.log.syslog.async.overflow[quarkus.log.syslog.async.overflow]`

[.description]
--
Determine whether to block the publisher (rather than drop the message) when the queue is full
--|`block`, `discard` 
|`block`


h|[[quarkus-core-general-config-items_quarkus.log.categories-logging-categories]]link:#quarkus-core-general-config-items_quarkus.log.categories-logging-categories[Logging categories]

h|Type
h|Default

a| [[quarkus-core-general-config-items_quarkus.log.category.-categories-.level]]`link:#quarkus-core-general-config-items_quarkus.log.category.-categories-.level[quarkus.log.category."categories".level]`

[.description]
--
The log level for this category. Note that to get log levels below `INFO`, the minimum level build time configuration option needs to be adjusted as well.
--|InheritableLevel 
|`inherit`


a| [[quarkus-core-general-config-items_quarkus.log.category.-categories-.handlers]]`link:#quarkus-core-general-config-items_quarkus.log.category.-categories-.handlers[quarkus.log.category."categories".handlers]`

[.description]
--
The names of the handlers to link to this category.
--|list of string 
|


a| [[quarkus-core-general-config-items_quarkus.log.category.-categories-.use-parent-handlers]]`link:#quarkus-core-general-config-items_quarkus.log.category.-categories-.use-parent-handlers[quarkus.log.category."categories".use-parent-handlers]`

[.description]
--
Specify whether or not this logger should send its output to its parent Logger
--|boolean 
|`true`


h|[[quarkus-core-general-config-items_quarkus.log.console-handlers-console-handlers]]link:#quarkus-core-general-config-items_quarkus.log.console-handlers-console-handlers[Console handlers]

h|Type
h|Default

a| [[quarkus-core-general-config-items_quarkus.log.handler.console.-console-handlers-.enable]]`link:#quarkus-core-general-config-items_quarkus.log.handler.console.-console-handlers-.enable[quarkus.log.handler.console."console-handlers".enable]`

[.description]
--
If console logging should be enabled
--|boolean 
|`true`


a| [[quarkus-core-general-config-items_quarkus.log.handler.console.-console-handlers-.stderr]]`link:#quarkus-core-general-config-items_quarkus.log.handler.console.-console-handlers-.stderr[quarkus.log.handler.console."console-handlers".stderr]`

[.description]
--
If console logging should go to `System++#++err` instead of `System++#++out`.
--|boolean 
|`false`


a| [[quarkus-core-general-config-items_quarkus.log.handler.console.-console-handlers-.format]]`link:#quarkus-core-general-config-items_quarkus.log.handler.console.-console-handlers-.format[quarkus.log.handler.console."console-handlers".format]`

[.description]
--
The log format. Note that this value will be ignored if an extension is present that takes control of console formatting (e.g. an XML or JSON-format extension).
--|string 
|`%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{3.}] (%t) %s%e%n`


a| [[quarkus-core-general-config-items_quarkus.log.handler.console.-console-handlers-.level]]`link:#quarkus-core-general-config-items_quarkus.log.handler.console.-console-handlers-.level[quarkus.log.handler.console."console-handlers".level]`

[.description]
--
The console log level.
--|link:https://docs.jboss.org/jbossas/javadoc/7.1.2.Final/org/jboss/logmanager/Level.html[Level]
 
|`ALL`


a| [[quarkus-core-general-config-items_quarkus.log.handler.console.-console-handlers-.darken]]`link:#quarkus-core-general-config-items_quarkus.log.handler.console.-console-handlers-.darken[quarkus.log.handler.console."console-handlers".darken]`

[.description]
--
Specify how much the colors should be darkened. Note that this value will be ignored if an extension is present that takes control of console formatting (e.g. an XML or JSON-format extension).
--|int 
|`0`


a| [[quarkus-core-general-config-items_quarkus.log.handler.console.-console-handlers-.async]]`link:#quarkus-core-general-config-items_quarkus.log.handler.console.-console-handlers-.async[quarkus.log.handler.console."console-handlers".async]`

[.description]
--
Indicates whether to log asynchronously
--|boolean 
|`false`


a| [[quarkus-core-general-config-items_quarkus.log.handler.console.-console-handlers-.async.queue-length]]`link:#quarkus-core-general-config-items_quarkus.log.handler.console.-console-handlers-.async.queue-length[quarkus.log.handler.console."console-handlers".async.queue-length]`

[.description]
--
The queue length to use before flushing writing
--|int 
|`512`


a| [[quarkus-core-general-config-items_quarkus.log.handler.console.-console-handlers-.async.overflow]]`link:#quarkus-core-general-config-items_quarkus.log.handler.console.-console-handlers-.async.overflow[quarkus.log.handler.console."console-handlers".async.overflow]`

[.description]
--
Determine whether to block the publisher (rather than drop the message) when the queue is full
--|`block`, `discard` 
|`block`


h|[[quarkus-core-general-config-items_quarkus.log.file-handlers-file-handlers]]link:#quarkus-core-general-config-items_quarkus.log.file-handlers-file-handlers[File handlers]

h|Type
h|Default

a| [[quarkus-core-general-config-items_quarkus.log.handler.file.-file-handlers-.enable]]`link:#quarkus-core-general-config-items_quarkus.log.handler.file.-file-handlers-.enable[quarkus.log.handler.file."file-handlers".enable]`

[.description]
--
If file logging should be enabled
--|boolean 
|`false`


a| [[quarkus-core-general-config-items_quarkus.log.handler.file.-file-handlers-.format]]`link:#quarkus-core-general-config-items_quarkus.log.handler.file.-file-handlers-.format[quarkus.log.handler.file."file-handlers".format]`

[.description]
--
The log format
--|string 
|`%d{yyyy-MM-dd HH:mm:ss,SSS} %h %N[%i] %-5p [%c{3.}] (%t) %s%e%n`


a| [[quarkus-core-general-config-items_quarkus.log.handler.file.-file-handlers-.level]]`link:#quarkus-core-general-config-items_quarkus.log.handler.file.-file-handlers-.level[quarkus.log.handler.file."file-handlers".level]`

[.description]
--
The level of logs to be written into the file.
--|link:https://docs.jboss.org/jbossas/javadoc/7.1.2.Final/org/jboss/logmanager/Level.html[Level]
 
|`ALL`


a| [[quarkus-core-general-config-items_quarkus.log.handler.file.-file-handlers-.path]]`link:#quarkus-core-general-config-items_quarkus.log.handler.file.-file-handlers-.path[quarkus.log.handler.file."file-handlers".path]`

[.description]
--
The name of the file in which logs will be written.
--|link:https://docs.oracle.com/javase/8/docs/api/java/io/File.html[File]
 
|`quarkus.log`


a| [[quarkus-core-general-config-items_quarkus.log.handler.file.-file-handlers-.async]]`link:#quarkus-core-general-config-items_quarkus.log.handler.file.-file-handlers-.async[quarkus.log.handler.file."file-handlers".async]`

[.description]
--
Indicates whether to log asynchronously
--|boolean 
|`false`


a| [[quarkus-core-general-config-items_quarkus.log.handler.file.-file-handlers-.async.queue-length]]`link:#quarkus-core-general-config-items_quarkus.log.handler.file.-file-handlers-.async.queue-length[quarkus.log.handler.file."file-handlers".async.queue-length]`

[.description]
--
The queue length to use before flushing writing
--|int 
|`512`


a| [[quarkus-core-general-config-items_quarkus.log.handler.file.-file-handlers-.async.overflow]]`link:#quarkus-core-general-config-items_quarkus.log.handler.file.-file-handlers-.async.overflow[quarkus.log.handler.file."file-handlers".async.overflow]`

[.description]
--
Determine whether to block the publisher (rather than drop the message) when the queue is full
--|`block`, `discard` 
|`block`


a| [[quarkus-core-general-config-items_quarkus.log.handler.file.-file-handlers-.rotation.max-file-size]]`link:#quarkus-core-general-config-items_quarkus.log.handler.file.-file-handlers-.rotation.max-file-size[quarkus.log.handler.file."file-handlers".rotation.max-file-size]`

[.description]
--
The maximum file size of the log file after which a rotation is executed.
--|MemorySize  link:#memory-size-note-anchor[icon:question-circle[], title=More information about the MemorySize format]
|`10`


a| [[quarkus-core-general-config-items_quarkus.log.handler.file.-file-handlers-.rotation.max-backup-index]]`link:#quarkus-core-general-config-items_quarkus.log.handler.file.-file-handlers-.rotation.max-backup-index[quarkus.log.handler.file."file-handlers".rotation.max-backup-index]`

[.description]
--
The maximum number of backups to keep.
--|int 
|`1`


a| [[quarkus-core-general-config-items_quarkus.log.handler.file.-file-handlers-.rotation.file-suffix]]`link:#quarkus-core-general-config-items_quarkus.log.handler.file.-file-handlers-.rotation.file-suffix[quarkus.log.handler.file."file-handlers".rotation.file-suffix]`

[.description]
--
File handler rotation file suffix. When used, the file will be rotated based on its suffix. Example fileSuffix: .yyyy-MM-dd
--|string 
|


a| [[quarkus-core-general-config-items_quarkus.log.handler.file.-file-handlers-.rotation.rotate-on-boot]]`link:#quarkus-core-general-config-items_quarkus.log.handler.file.-file-handlers-.rotation.rotate-on-boot[quarkus.log.handler.file."file-handlers".rotation.rotate-on-boot]`

[.description]
--
Indicates whether to rotate log files on server initialization. 
 You need to either set a `max-file-size` or configure a `file-suffix` for it to work.
--|boolean 
|`true`


h|[[quarkus-core-general-config-items_quarkus.log.syslog-handlers-syslog-handlers]]link:#quarkus-core-general-config-items_quarkus.log.syslog-handlers-syslog-handlers[Syslog handlers]

h|Type
h|Default

a| [[quarkus-core-general-config-items_quarkus.log.handler.syslog.-syslog-handlers-.enable]]`link:#quarkus-core-general-config-items_quarkus.log.handler.syslog.-syslog-handlers-.enable[quarkus.log.handler.syslog."syslog-handlers".enable]`

[.description]
--
If syslog logging should be enabled
--|boolean 
|`false`


a| [[quarkus-core-general-config-items_quarkus.log.handler.syslog.-syslog-handlers-.endpoint]]`link:#quarkus-core-general-config-items_quarkus.log.handler.syslog.-syslog-handlers-.endpoint[quarkus.log.handler.syslog."syslog-handlers".endpoint]`

[.description]
--
The IP address and port of the syslog server
--|host:port 
|`localhost:514`


a| [[quarkus-core-general-config-items_quarkus.log.handler.syslog.-syslog-handlers-.app-name]]`link:#quarkus-core-general-config-items_quarkus.log.handler.syslog.-syslog-handlers-.app-name[quarkus.log.handler.syslog."syslog-handlers".app-name]`

[.description]
--
The app name used when formatting the message in RFC5424 format
--|string 
|


a| [[quarkus-core-general-config-items_quarkus.log.handler.syslog.-syslog-handlers-.hostname]]`link:#quarkus-core-general-config-items_quarkus.log.handler.syslog.-syslog-handlers-.hostname[quarkus.log.handler.syslog."syslog-handlers".hostname]`

[.description]
--
The name of the host the messages are being sent from
--|string 
|


a| [[quarkus-core-general-config-items_quarkus.log.handler.syslog.-syslog-handlers-.facility]]`link:#quarkus-core-general-config-items_quarkus.log.handler.syslog.-syslog-handlers-.facility[quarkus.log.handler.syslog."syslog-handlers".facility]`

[.description]
--
Sets the facility used when calculating the priority of the message as defined by RFC-5424 and RFC-3164
--|`kernel`, `user-level`, `mail-system`, `system-daemons`, `security`, `syslogd`, `line-printer`, `network-news`, `uucp`, `clock-daemon`, `security2`, `ftp-daemon`, `ntp`, `log-audit`, `log-alert`, `clock-daemon2`, `local-use-0`, `local-use-1`, `local-use-2`, `local-use-3`, `local-use-4`, `local-use-5`, `local-use-6`, `local-use-7` 
|`user-level`


a| [[quarkus-core-general-config-items_quarkus.log.handler.syslog.-syslog-handlers-.syslog-type]]`link:#quarkus-core-general-config-items_quarkus.log.handler.syslog.-syslog-handlers-.syslog-type[quarkus.log.handler.syslog."syslog-handlers".syslog-type]`

[.description]
--
Set the `SyslogType syslog type` this handler should use to format the message sent
--|`rfc5424`, `rfc3164` 
|`rfc5424`


a| [[quarkus-core-general-config-items_quarkus.log.handler.syslog.-syslog-handlers-.protocol]]`link:#quarkus-core-general-config-items_quarkus.log.handler.syslog.-syslog-handlers-.protocol[quarkus.log.handler.syslog."syslog-handlers".protocol]`

[.description]
--
Sets the protocol used to connect to the syslog server
--|`tcp`, `udp`, `ssl-tcp` 
|`tcp`


a| [[quarkus-core-general-config-items_quarkus.log.handler.syslog.-syslog-handlers-.use-counting-framing]]`link:#quarkus-core-general-config-items_quarkus.log.handler.syslog.-syslog-handlers-.use-counting-framing[quarkus.log.handler.syslog."syslog-handlers".use-counting-framing]`

[.description]
--
Set to `true` if the message being sent should be prefixed with the size of the message
--|boolean 
|`false`


a| [[quarkus-core-general-config-items_quarkus.log.handler.syslog.-syslog-handlers-.truncate]]`link:#quarkus-core-general-config-items_quarkus.log.handler.syslog.-syslog-handlers-.truncate[quarkus.log.handler.syslog."syslog-handlers".truncate]`

[.description]
--
Set to `true` if the message should be truncated
--|boolean 
|`true`


a| [[quarkus-core-general-config-items_quarkus.log.handler.syslog.-syslog-handlers-.block-on-reconnect]]`link:#quarkus-core-general-config-items_quarkus.log.handler.syslog.-syslog-handlers-.block-on-reconnect[quarkus.log.handler.syslog."syslog-handlers".block-on-reconnect]`

[.description]
--
Enables or disables blocking when attempting to reconnect a `org.jboss.logmanager.handlers.SyslogHandler.Protocol++#++TCP
TCP` or `org.jboss.logmanager.handlers.SyslogHandler.Protocol++#++SSL_TCP SSL TCP` protocol
--|boolean 
|`false`


a| [[quarkus-core-general-config-items_quarkus.log.handler.syslog.-syslog-handlers-.format]]`link:#quarkus-core-general-config-items_quarkus.log.handler.syslog.-syslog-handlers-.format[quarkus.log.handler.syslog."syslog-handlers".format]`

[.description]
--
The log message format
--|string 
|`%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{3.}] (%t) %s%e%n`


a| [[quarkus-core-general-config-items_quarkus.log.handler.syslog.-syslog-handlers-.level]]`link:#quarkus-core-general-config-items_quarkus.log.handler.syslog.-syslog-handlers-.level[quarkus.log.handler.syslog."syslog-handlers".level]`

[.description]
--
The log level specifying, which message levels will be logged by syslog logger
--|link:https://docs.jboss.org/jbossas/javadoc/7.1.2.Final/org/jboss/logmanager/Level.html[Level]
 
|`ALL`


a| [[quarkus-core-general-config-items_quarkus.log.handler.syslog.-syslog-handlers-.async]]`link:#quarkus-core-general-config-items_quarkus.log.handler.syslog.-syslog-handlers-.async[quarkus.log.handler.syslog."syslog-handlers".async]`

[.description]
--
Indicates whether to log asynchronously
--|boolean 
|`false`


a| [[quarkus-core-general-config-items_quarkus.log.handler.syslog.-syslog-handlers-.async.queue-length]]`link:#quarkus-core-general-config-items_quarkus.log.handler.syslog.-syslog-handlers-.async.queue-length[quarkus.log.handler.syslog."syslog-handlers".async.queue-length]`

[.description]
--
The queue length to use before flushing writing
--|int 
|`512`


a| [[quarkus-core-general-config-items_quarkus.log.handler.syslog.-syslog-handlers-.async.overflow]]`link:#quarkus-core-general-config-items_quarkus.log.handler.syslog.-syslog-handlers-.async.overflow[quarkus.log.handler.syslog."syslog-handlers".async.overflow]`

[.description]
--
Determine whether to block the publisher (rather than drop the message) when the queue is full
--|`block`, `discard` 
|`block`


h|[[quarkus-core-general-config-items_quarkus.log.filters-log-cleanup-filters-internal-use]]link:#quarkus-core-general-config-items_quarkus.log.filters-log-cleanup-filters-internal-use[Log cleanup filters - internal use]

h|Type
h|Default

a| [[quarkus-core-general-config-items_quarkus.log.filter.-filters-.if-starts-with]]`link:#quarkus-core-general-config-items_quarkus.log.filter.-filters-.if-starts-with[quarkus.log.filter."filters".if-starts-with]`

[.description]
--
The message starts to match
--|list of string 
|`inherit`


a| [[quarkus-core-general-config-items_quarkus.log.filter.-filters-.target-level]]`link:#quarkus-core-general-config-items_quarkus.log.filter.-filters-.target-level[quarkus.log.filter."filters".target-level]`

[.description]
--
The new log level for the filtered message, defaults to DEBUG
--|link:https://docs.jboss.org/jbossas/javadoc/7.1.2.Final/org/jboss/logmanager/Level.html[Level]
 
|`DEBUG`

|===
[NOTE]
[[memory-size-note-anchor]]
.About the MemorySize format
====
A size configuration option recognises string in this format (shown as a regular expression): `[0-9]+[KkMmGgTtPpEeZzYy]?`.
If no suffix is given, assume bytes.
====
